Fix funky paragraph spacing on 2012.html

--- a/css/style.css
+++ b/css/style.css
@@ -157,12 +157,12 @@ p {
     font-size:1.25em;
     font-family:'Lato', Helvetica, Arial, sans-serif !important;
     font-weight: 300;
-    margin-bottom: 1.2em;
+    margin: 0 0 1.2em;
     line-height: 1.65;
     color: #666;
 }
 
-p em{
+p em {
     font-size: 80%;
     text-transform: uppercase;
     letter-spacing: .04em;
